<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="org.descartae.android.view.fragments.intro.IntroFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_centerVertical="true"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
      android:id="@+id/imageView_intro"
      android:layout_width="@dimen/intro_image"
      android:layout_height="@dimen/intro_image"
      android:layout_gravity="center_horizontal"/>

    <TextView
      android:id="@+id/textView_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top"
      android:gravity="center_horizontal"
      android:textColor="@android:color/white"
      android:textSize="@dimen/text_large"
      android:textStyle="bold"/>

    <TextView
      android:id="@+id/textView_subtitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:lineSpacingExtra="2dp"
      android:padding="@dimen/activity_horizontal_margin"
      android:textColor="@android:color/white"
      android:textSize="@dimen/text_regular"/>

    <Button
      android:id="@+id/button_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/padding"
      style="@style/Widget.AppCompat.Button.Colored"
      android:minWidth="125dp"
      android:padding="@dimen/activity_horizontal_margin"
      android:text="@string/start"
      android:textColor="@android:color/white"
      android:visibility="gone"/>

  </LinearLayout>
</RelativeLayout>