<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_intro"
                tools:context="org.descartae.android.view.activities.IntroActivity">

  <android.support.v4.view.ViewPager
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

  <me.relex.circleindicator.CircleIndicator
    android:id="@+id/indicator"
    app:ci_width="@dimen/indicator_size"
    app:ci_height="@dimen/indicator_size"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/margin_top"
    android:layout_width="match_parent"
    android:layout_height="48dp"/>

</RelativeLayout>
