...
  <string name="onboard_subtitle_2">Fique por dentro dos dias e horários que passam a coleta de lixo domiciliar e seco de onde você está.</string>
  <string name="onboard_title_3">Feito na Biblioteca!</string>
  <string name="onboard_subtitle_3">Isso mesmo! Os dados do Descartaê  são alimentados pelos bibliotecários  de cada cidade.</string>
  <string name="onboard_title_4">Junte-se a nós!</string>
  <string name="onboard_subtitle_4">Clique no botão abaixo para começar a deixar sua vida mais fácil e green.</string>
  <string name="start">Começar</string>
  <string name="permission_gps_title">Localização</string>
  <string name="permission_gps_message">É necessário permitir o uso da sua localização para podermos encontrar os pontos de coleta mais próximos de você</string>
  <string name="allow">Permitir</string>
  <string name="cancel">Cancelar</string>
  <string name="action_continue">Continuar</string>
  <string name="menu_about">Sobre o projeto</string>
  <string name="menu_feedback">Enviar feedback</string>
...
